--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
             value="add"> Add
     </button>
 
+    <div style="display: inline;">
+        <button id="clear">clear all
+        </button>
+    </div>
+
     <div id="todosList" class="todos">
 
     </div>
+
 
 </section>
 
